--- a/app/views/configurators/angular_views/_constraint.html
+++ b/app/views/configurators/angular_views/_constraint.html
@@ -28,6 +28,8 @@
                     href="javascript:void(0)">Time</a></li>
             <li class="nav-item nav-link" ng-class="{active:isSet(3)}" ng-click="setTab(3)"><a
                     href="javascript:void(0)">Distance</a></li>
+            <li class="nav-item nav-link" ng-class="{active:isSet(4)}" ng-click="setTab(4)"><a
+                    href="javascript:void(0)">Zone</a></li>
             <!-- <li class="nav-item nav-link" ng-class="{active:isSet(4)}" ng-click="setTab(4)"><a href="javascript:void(0)">Zone</a></li> -->
         </ul>
     </div>
@@ -323,8 +325,26 @@
 
 
 
-        <div id="menu3" class="tab-pane  " ng-class="{'in active show':isSet(4)}">
+        <div id="menu3" class="tab-pane menu3" ng-class="{'in active show':isSet(4)}">
             <!-- <add-zone></add-zone> -->
+            <h3 class="mb-2">Configurator Tab Content</h3>
+            <form novalidate class="simple-form config-form" name="config-form">
+                <div class="row mb-2 ">
+                    <div class="col-md-3">
+                        <label>WE Cutoff Checkin: <input type="number" required class="form-control" ng-model="we_checkin" /></label><br />
+                    </div>
+                    <div class="col-md-3">
+                        <label>WE Cutoff Checkout: <input type="number" required class="form-control" ng-model="we_checkout" /></label><br />
+                    </div>
+                    <div class="col-md-3">
+                        <label>WD Cutoff Checkin: <input type="number" required class="form-control" ng-model="wd_checkin" /></label><br />
+                    </div>
+                    <div class="col-md-3">
+                        <label>WD Cutoff Checkout: <input type="number" required class="form-control" ng-model="wd_checkout" /></label><br />
+                    </div>
+                </div>
+                <input class="btn main-submit-btn" style="float: left !important;" type="submit" ng-click="onSubmit()" value="Save" />
+            </form>
         </div>
     </div>
 
