--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -180,6 +180,7 @@
    right:0;
    top:0;
    bottom: 0;
+   z-index: 100;
    width:400px;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
    background-color: #ffffff;
@@ -196,7 +197,8 @@
     z-index: 10000;
  }
 
-.vayau-routing .vayau-sidebar.vehical-sidebar {
+.vayau-routing .vayau-sidebar.vehical-sidebar,
+.vayau-routing .vayau-sidebar.filter-sidebar {
   position: fixed;
   right:0;
   top:0;
@@ -204,7 +206,7 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   background-color: #ffffff;
   width:400px;
-  z-index: 2;
+  z-index: 100;
 }
 
 .pright-0 {
