--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -6,7 +6,7 @@
 
   <div class="container-fluid mt-4">
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-8">
         <form class="form-inline">
           <div class="form-group pr-2">
             <select ng-model="siteId" class="form-control" placeholder="Select Site" ng-change="updateFilters()">
@@ -50,12 +50,13 @@
         </form>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-4">
 
         <div class="btn-toolbar float-right pad-8" role="toolbar">
 
           <div  style="float: right;">
-              <button type="button" ng-click="toggleMap()" class="btn btn-terniary-blue margin-right">Show Map</button>
+            <button type="button" ng-click="onFilter()" class="btn btn-terniary-blue">Filter</button>
+              <button type="button" ng-click="toggleMap()" class="btn btn-terniary-blue margin-right margin-left">Show Map</button>
               <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize Route</button>
           </div>
           <!-- <div class="btn-group" role="group">
@@ -476,6 +477,36 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="row vayau-sidebar filter-sidebar" ng-if="filterToggle">
+      <div class="col-md-12 ng-scope">
+        <div class="vaayu-sidebar-panel">
+          <div class="vaayu-sidebar-heading">
+            <div class="row">
+              <div class="col-md-10">
+                <h3 class="float-left"><span class="vaayu-sidebar-title">Filter</span> <span class="title-caption"></span></h3>
+              </div>
+              <div class="col-md-2">
+                <button type="button" ng-click="hideFilterSidebar()" class="btn btn-close float-right">✕</button>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <form>
+                  <div class="form-group pr-2">
+                    <select ng-model="zone-filter" class="form-control" placeholder="Select Site" ng-change="zoneFilter()" style="width: 100%;">
+                      <option ng-value="1">Option 1</option>
+                      <option ng-value="2">Option 2</option>
+                      <option ng-value="3">Option 3</option>
+                      <option ng-value="4">Option 4</option>
+                    </select>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+
     </div>
 
     <div class="row vayau-sidebar vehical-sidebar" ng-if="isVehicalSidebarView">
