--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -29,7 +29,8 @@
                                 <option>Disabled select</option>
                             </select>
                         </div> -->
-            <toaster-container ng-show="toggleView"></toaster-container>
+            <!-- <toaster-container ng-show="toggleView"></toaster-container> -->
+            <toaster-container></toaster-container>
             <div class="form-group pr-2" ng-init="showDropdown=false">
               <div class="form-group pr-2">
                 <p class="input-group custom-date date_style ">
