--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -496,7 +496,7 @@
                 <form>
                   <div class="form-group pr-2">
                     <select ng-model="zone-filter" class="form-control" placeholder="Select Site" ng-change="zoneFilter()" style="width: 100%;">
-                      <option ng-value="1">Option 1</option>
+                      <option ng-value="1" selected="selected">Option 1</option>
                       <option ng-value="2">Option 2</option>
                       <option ng-value="3">Option 3</option>
                       <option ng-value="4">Option 4</option>
