--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -278,3 +278,21 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.selectWrapper select option{
+  padding: 12px 40px 12px 20px;
+  font-size: 18px;
+  line-height: 18px;
+  width: 100%;
+  border: none;
+  box-shadow: none;
+  background: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+  -moz-appearance: none;
+  text-indent: 0.01px;
+  text-overflow: ellipsis;
+}
+
