changes in the error message

--- a/app/views/configurators/angular_views/_constraint.html
+++ b/app/views/configurators/angular_views/_constraint.html
@@ -107,7 +107,7 @@
                                     show-meridian="ismeridian" required></timepicker>
                                     <!-- <input type="number" class="form-control" id="appt" min="0" max="23"
                                         ng-model="from_time" name='from_time' required> -->
-                                    <span ng-show="hasError('from_time', 'required')" class="help-block">From Time is
+                                    <span ng-show="hasError('from_time', 'required')" class="help-block" style="color: red;">From Time is
                                         required.</span>
                                 </div>
 
@@ -120,7 +120,7 @@
                                      show-meridian="ismeridian" required></timepicker>
                                     <!-- <input type="number" class="form-control" id="appt" min="0" max="23"
                                         ng-model="to_time" name='to_time' required> -->
-                                    <span ng-show="hasError('to_time', 'required')" class="help-block">To Time is
+                                    <span ng-show="hasError('to_time', 'required')" class="help-block" style="color: red;">To Time is
                                         required.</span>
                                 </div>
 
