--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -248,13 +248,19 @@
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading  .title_container {
-  font-family: "Roboto";
+  /* font-family: "Roboto";
   font-weight: 600;
   color: #ffffff;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-left: 10px; */
+  font-family: "Roboto";
+  font-weight: 600;
+  color:#ffffff;
   padding-left: 10px;
+  width: 100%;
+  padding-right: 10px;
 }
 .vayau-routing .employee-cluster-panel .employee-list-group .empId {
   text-transform: uppercase;
@@ -611,10 +617,10 @@
   color:#000 !important;
   font-weight: 600;
   margin-left:4px;
-  font-size: 16px;
+  font-size: 12px;
 }
 .vayau-routing .select_all_wrapper  .hrLine {
-  margin: 8px 0 15px 0;
+  margin: 3px 0 10px 0;
 }
 .kilometer_time_duration {
   font-family: "Roboto";
@@ -969,10 +975,15 @@
   outline: 0;
 }
 .vaayu-dropzone .guard_checkbox {
-  height: 16px;
+  /* height: 16px;
   width: 16px;
   margin-right: 2px;
-  margin-top:0 !important;
+  margin-top:0 !important; */
+
+  height: 15px;
+  width: 15px;
+  margin-right: 2px;
+  margin-top: 4px !important;
 }
 /* .vaayu-dropzone {
   -webkit-column-count: 6; 
@@ -1109,17 +1120,27 @@
   }
 
   .width-80 {
-    width:75% !important;
+    width:76% !important;
     float:left;
   }
 
   .width-20 {
-    width:25% !important;
+    width:24% !important;
     float:left;
   }
-  .tempRoute {
-    width:200px !important;
+  .width80 {
+    width:80% !important;
+    float:left;
   }
+
+  .width20 {
+    width:20% !important;
+    float:left;
+  }
+
+  /* .tempRoute {
+    width:200px !important;
+  } */
 .bgRed {
   background: #e67878 !important;
 }
@@ -1147,4 +1168,16 @@
   width: 208px !important;
   top: 60px !important;
   left: auto !important;
+}
+
+.vayau-routing .multiselect-parent.dropdown-multiselect .dropdown-toggle {
+  padding: 4px 9px !important;
+  float: right !important;
+  background:transparent !important;
+  color:#fff !important;
+}
+
+.vayau-routing .multiselect-parent.dropdown-multiselect .checkbox {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
 }
