--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -107,7 +107,9 @@
 .vayau-routing .pad-8 {
   padding: 0 8px;
 }
-
+.vayau-routing {
+  margin-top:-9px;
+}
 .vayau-routing .card-analytic .text {
   font-family: "Roboto";
   font-weight: 400;
@@ -219,11 +221,13 @@
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #ffffff;
+  display: block;
   /* display: inline-block;
   margin-bottom: 10px;
   margin-right: 10px;
   height: max-content; */
 }
+
 
 .fixed-width {
   min-width: 190px !important;
@@ -236,27 +240,33 @@
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading {
-  height: 41px;
+  height: 28px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #394266;
   display: flex;
-  align-items: center;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  padding-top: 0;
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading  .title_container {
-  font-family: "Roboto";
+  /* font-family: "Roboto";
   font-weight: 600;
   color: #ffffff;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-left: 10px; */
+  font-family: "Roboto";
+  font-weight: 600;
+  color:#ffffff;
   padding-left: 10px;
+  width: 100%;
+  padding-right: 10px;
 }
 .vayau-routing .employee-cluster-panel .employee-list-group .empId {
   text-transform: uppercase;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   font-weight: 600;
 }
 
@@ -320,7 +330,7 @@
   background-color:#ffffff;
   margin-bottom: 5px;
   display: flex;
-  padding: 5px 0px;
+  padding: 2px 0px;
 }
 
 .vayau-routing .employee-cluster-panel .employee-list-group-item.female {
@@ -344,8 +354,8 @@
 .vehicle_assign > .inner-addon{color:#fff;} 
 .vayau-routing .employee-cluster-panel .employee-list-group-item .input-group-addon.addon-prepend {
   width: 35px;
-  height: 38px;
-  padding: 8px;
+  height: 32px;
+  padding: 6px;
   border-top-left-radius: 4px;
   border-bottom-left-radius:4px;
   float:left;
@@ -388,6 +398,7 @@
   align-items: center;
   /* display: flex; */
   /* flex: 1; */
+  font-size:12px !important;
 }
 
 .vayau-routing .employee-cluster-panel .employee-list-group-item .inner-addon {
@@ -412,7 +423,7 @@
 }
 
 .vayau-routing .card-panel .employee-list-group {
-  padding: 10px;
+  padding: 0 10px;
   height: 100%;
   background:#ebecf0;
 }
@@ -424,7 +435,7 @@
 
 .vayau-panel-footer .employee-list-group .employee-list-group-item.vehicle-assign {
   width: 95px;
-  height: 38px;
+  height: 30px;
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   border: solid 0.5px #3597ec;
@@ -434,7 +445,7 @@
 
 .vayau-panel-footer .employee-list-group .employee-list-group-item.vehicle-add {
   width: 115px;
-  height: 38px;
+  height: 30px;
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   border: dashed 0.5px #707070;
@@ -445,8 +456,8 @@
 
 .employee-cluster-panel .employee-cluster-panel-heading-meta {
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
-  background-color:#242432;
-  color:#fff;
+  background-color:#ebecf0;
+  color:#000;
   display: flex;
   height: 35px;
   align-items: center;
@@ -501,7 +512,7 @@
 }
 .vayau-panel-footer .employee-list-group .employee-list-group-item.guard-add {
   width: 95px;
-  height: 38px;
+  height: 30px;
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   /* border: solid 0.5px #707070; */
@@ -512,7 +523,7 @@
 
 .vayau-panel-footer .employee-list-group .employee-list-group-item.guard-assign {
   width: 95px;
-  height: 38px;
+  height: 30px;
   border-radius: 4px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   border: solid 0.5px #707070;
@@ -587,38 +598,39 @@
   background:#ebecf0;
 }
 .vayau-routing .employee-cluster-panel-body .guard-icon {
-  border: 1px solid #fff;
   border-radius: 4px;
-  padding: 2px 3px;
-  background:#14a89e;
-  height: 17px;
-  width: 17px;
+  padding: 3px 3px;
+  background:#242432;
+  height: 15px;
+  width: 15px;
   display: flex;
   align-content: center;
   margin-right: 2px;
+  font-size: 11px;
+  color:#fff;
 }
 .vayau-routing .employee-cluster-panel-body .employee-list-group {
   margin-bottom: 0;
   min-height: 80px;
 }
 .vayau-routing .select_all_wrapper {
-  margin-top:10px !important;
+  margin-top:5px !important;
 }
 .vayau-routing .select_all_wrapper label {
   color:#000 !important;
   font-weight: 600;
   margin-left:4px;
-  font-size: 16px;
+  font-size: 12px;
 }
 .vayau-routing .select_all_wrapper  .hrLine {
-  margin: 8px 0 15px 0;
+  margin: 3px 0 10px 0;
 }
 .kilometer_time_duration {
   font-family: "Roboto";
-  font-size: 12px;
+  font-size: 10px;
   font-weight: 900;
   line-height: 1.5;
-  color: #FFF;
+  color: #000;
 }
 
 .align-center {
@@ -911,7 +923,7 @@
 }
 
 .custom-panel-map {
-  width:100% !important;
+  width:210px !important;
   margin-top: 0px;
 }
 
@@ -924,7 +936,7 @@
 }
 
 .custom-panel-map .employee-cluster-panel-heading {
-  height: 41px;
+  height: 28px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #394266;
   display: flex;
@@ -966,9 +978,15 @@
   outline: 0;
 }
 .vaayu-dropzone .guard_checkbox {
-  height: 16px;
+  /* height: 16px;
   width: 16px;
   margin-right: 2px;
+  margin-top:0 !important; */
+
+  height: 15px;
+  width: 15px;
+  margin-right: 2px;
+  margin-top: 4px !important;
 }
 /* .vaayu-dropzone {
   -webkit-column-count: 6; 
@@ -1094,7 +1112,7 @@
 
     /* Mesonary Style Goes Here */
   .masonry-brick {
-    margin: 0 8px 8px 0;
+    margin: 0 12px 12px 0;
     display: none;
     width:210px;
     /* float:left; */
@@ -1105,14 +1123,93 @@
   }
 
   .width-80 {
-    width:75% !important;
+    width:80%;
     float:left;
   }
 
   .width-20 {
-    width:25% !important;
+    width:20%;
     float:left;
   }
-  .tempRoute {
-    width:90% !important;
+
+  .width-80.mapVisible {
+    width:76% !important;
+    float:left;
   }
+
+  .width-20.mapVisible {
+    width:24% !important;
+    float:left;
+  }
+  .width80 {
+    width:80% !important;
+    float:left;
+    padding-left: 15px;
+    /* padding-right: 40px; */
+  }
+
+  .width20 {
+    width:20% !important;
+    float:left;
+  }
+
+  /* .tempRoute {
+    width:200px !important;
+  } */
+.bgRed {
+  background: #e67878 !important;
+}
+.bgGreen {
+  background: #394266 !important;
+}
+.bgBlue {
+  background: #14a89e !important;
+}
+
+.vehicle_type {
+  font-size: 9px;
+  font-weight: bold;
+  text-align: right;
+  padding-right: 26px !important;
+  padding-top: 3px;
+  cursor: pointer;
+}
+.employee-cluster-panel-title {
+  width:100% !important;
+}
+
+.fixed-container {
+  position: fixed !important;
+  width: 210px !important;
+  top: 30px !important;
+  left: auto !important;
+}
+
+.vayau-routing .multiselect-parent.dropdown-multiselect .dropdown-toggle {
+  padding: 4px 9px !important;
+  float: right !important;
+  background:transparent !important;
+  color:#fff !important;
+}
+
+.vayau-routing .multiselect-parent.dropdown-multiselect .checkbox {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+.tempRoute .employee-cluster-panel-body .employee-list-group {
+  padding-top: 5px !important;
+}
+.vayau-routing .employee-cluster-panel .employee-cluster-panel-heading .tick.guard_checkbox{
+  position: relative;
+  top:3px;
+}
+.vayau-routing .employee-cluster-panel .employee-cluster-panel-body .tick.guard_checkbox{
+  position: relative;
+  top:-2px;
+}
+.tempRoute .employee-cluster-panel-heading {
+  padding-top: 6px !important;
+}
+.content > .content-body {
+  font-size:12px !important;
+}
