--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -54,7 +54,7 @@
 
       <div class="col-md-4">
 
-        <div class="btn-toolbar float-right pad-8" role="toolbar">
+        <div class="btn-toolbar float-right pad-8 mt-5" role="toolbar">
 
           <div  style="float: right;">
               <button type="button" ng-click="autoAllocate()" class="btn btn-terniary-blue margin-right">Auto Allocate</button>
@@ -130,7 +130,7 @@
             <li ng-class="{active:isSet(1)}"><a href ng-click="setTab(1)">ALL ROUTES</a></li>
             <li ng-class="{active:isSet(2)}"><a href ng-click="setTab(2)">ALLOCATED ROUTES</a></li>
             <li ng-class="{active:isSet(3)}"><a href ng-click="setTab(3)">NOT ALLOCATED</a></li>
-            <div class="btn-toolbar btn-group-toolbar" role="toolbar">
+            <div class="btn-toolbar btn-group-toolbar " role="toolbar">
               <div class="btn-group" role="group">
                 <button type="button" ng-click="autoAllocate()" class="btn btn-terniary">Auto Allocate</button>
               </div>
