--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -476,7 +476,7 @@
     </div>
 
     <div class="row vayau-sidebar vehical-sidebar" ng-if="isVehicalSidebarView">
-      <div ng-repeat="list in vehicals" class="col-md-12">
+      <div  class="col-md-12">
         <div class="vaayu-sidebar-panel">
           <div class="vaayu-sidebar-heading">
             <div class="row">
@@ -525,7 +525,6 @@
           </form>
 
           <div class="vaayu-sidebar-body clearfix form-group" set-height style="overflow-y: auto">
-
             <div class="row form-group">
               <div class="col-md-6">
                 <span class="driver-List-post-filter">
@@ -537,36 +536,38 @@
               </div>
             </div>
 
-            <ul class="employee-list-group" dnd-list="list.vehical" dnd-effect-allowed="copy"
-              dnd-allowed-types="list.allowedTypes" dnd-disable-if="list.vehical.length >= 1"
-              dnd-dragover="dragoverVehicleCallback(list,index, external, type)"
-              dnd-drop="dropVehicleCallback(list,index, item, external, type)">
-              <li ng-repeat="vehical in list.vehical" dnd-draggable="vehical" no-drop
-                dnd-effect-allowed="move" dnd-type="vehical.type" dnd-disable-if="vehical.type == 'unknown'"
-                dnd-moved="list.vehical.splice($index, 1)"
-                class="background-{{vehical.type}} input-group employee-list-group-item">
+            <div ng-repeat="list in vehicals">
+                <ul class="employee-list-group" dnd-list="list.vehical" dnd-effect-allowed="copy"
+                  dnd-allowed-types="list.allowedTypes" dnd-disable-if="list.vehical.length >= 1"
+                  dnd-dragover="dragoverVehicleCallback(list,index, external, type)"
+                  dnd-drop="dropVehicleCallback(list,index, item, external, type)">
+                  <li ng-repeat="vehical in list.vehical" dnd-draggable="vehical" no-drop
+                    dnd-effect-allowed="move" dnd-type="vehical.type" dnd-disable-if="vehical.type == 'unknown'"
+                    dnd-moved="list.vehical.splice($index, 1)"
+                    class="background-{{vehical.type}} input-group employee-list-group-item">
 
-                <span class="input-group-addon addon-prepend">
-                  <div class="inner-addon">
-                    <i class="fa fa-car"></i>
-                  </div>
-                </span>
+                    <span class="input-group-addon addon-prepend">
+                      <div class="inner-addon">
+                        <i class="fa fa-car"></i>
+                      </div>
+                    </span>
 
-                <div class="inner-text">
-                  <div class="text-medium"> {{vehical.vehicleNumber}} - <i ng-if="vehical.driverStatus"> ({{vehical.driverStatus.toUpperCase()}}) </i>
-                    <i ng-if="!vehical.driverStatus"> ({{selected_vehicle_status.toUpperCase()}}) </i></div>
-                  <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
-                </div>
+                    <div class="inner-text">
+                      <div class="text-medium"> {{vehical.vehicleNumber}} - <i ng-if="vehical.driverStatus"> ({{vehical.driverStatus.toUpperCase()}}) </i>
+                        <i ng-if="!vehical.driverStatus"> ({{selected_vehicle_status.toUpperCase()}}) </i></div>
+                      <div class="text-big"> {{vehical.vehicleType}} - {{vehical.model}}</div>
+                    </div>
 
-                <div class="input-group-addon addon-append">
-                  <i class="fa fa-bars" aria-hidden="true"></i>
-                </div>
-              </li>
+                    <div class="input-group-addon addon-append">
+                      <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+                  </li>
 
-              <li class="dndPlaceholder">
-                Drop any <strong>{{list.allowedTypes.join(' or ')}}</strong> here
-              </li>
-            </ul>
+                  <li class="dndPlaceholder">
+                    Drop any <strong>{{list.allowedTypes.join(' or ')}}</strong> here
+                  </li>
+                </ul>
+            </div>
           </div>
           <div class="row vaayu-sidebar-footer">
             <div class="col-md-6 pr-2">
