--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -8,7 +8,7 @@
 
   <div class="container-fluid mt-4">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-7">
         <form class="form-inline">
           <div class="form-group pr-2">
             <select ng-model="siteId" class="form-control" placeholder="Select Site" ng-change="updateFilters()">
@@ -52,12 +52,12 @@
         </form>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-5">
 
         <div class="btn-toolbar float-right pad-8 mt-5" role="toolbar">
 
           <div  style="float: right;">
-            <button type="button" ng-click="onFilter()" class="btn btn-terniary-blue">Filter</button>
+            <button type="button" ng-click="onFilter()" class="btn btn-terniary-blue margin-right">Filter</button>
               <button type="button" ng-click="autoAllocate()" class="btn btn-terniary-blue margin-right">Auto Allocate</button>
               <button type="button" ng-click="toggleMap()" class="btn btn-terniary-blue margin-right"><span ng-if="isShowMap">Hide Map</span><span ng-if="!isShowMap">Show Map</span></button>
               <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize Route</button>
