--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,13 +2,13 @@
   display: flex;
   height: 35px;
   border-radius: 0 !important;
-  border: dashed 2px #e2e2e2;
-  background-color:#f9f9f9 !important;
+  border: dashed 2px #000;
+  background-color:#e2e2e2 !important;
   padding: 0px 12px;
   align-items: center;
-  color:#aeaeae;
+  color:#000;
   font-size: 12px;
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .vayau-routing .card-panel .vaayu-dropzone .employee-list-group .dndDraggingSource {
@@ -1229,4 +1229,16 @@
 .custom-select > a.dropdown-toggle {
   line-height: 24px;
   height: 25px;
+}
+
+.ui-select-container.ui-select-bootstrap {
+  float:right;
+}
+.ui-select-container.ui-select-bootstrap .form-control {
+  height: 26px !important;
+  width: 85px;
+  margin-top: 2px;
+  max-width: 85px !important;
+  min-width: 85px !important;
+  line-height: 0.7;
 }
