Fixed issue for HQ adress,Business name

--- a/app/views/business_associates/_form.html.slim
+++ b/app/views/business_associates/_form.html.slim
@@ -32,6 +32,15 @@
   .row
     .col-md-15-6.col-md-15-offset-3
       = f.input :state_code, label: 'State Code'
+  .row
+    .col-md-15-6.col-md-15-offset-3
+      = f.input :hq_address, label: 'HQ Address '
+  .row
+    .col-md-15-6.col-md-15-offset-3
+      = f.input :business_type, label: 'Business Type'
+  .row
+    .col-md-15-6.col-md-15-offset-3
+      = f.input :name, label: 'Admin Name'
 
 
 
